# fedimint-dkg-cli-standalone

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  simple_dkg.sh
src/: main.rs
